# mexc-futures-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_depth_fix.py
examples/: basic_example.py
mexc_futures/: __init__.py  client.py
mexc_futures/types/: __init__.py  account.py  market.py  orders.py
mexc_futures/utils/: __init__.py  constants.py  errors.py  headers.py  logger.py
